added linear regression and heat map

--- a/03_Naive_Bayesian_Classifiers.ipynb
+++ b/03_Naive_Bayesian_Classifiers.ipynb
@@ -290,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def explore_ml(remove_cols):\n",
