fixed sns error

--- a/05_PCA_and_Clustering.ipynb
+++ b/05_PCA_and_Clustering.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,6 +44,15 @@
     "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/_UVHneBUBW0\" \\\n",
     "frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -77,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance for Principal Component 0: 0.7277045209380135\n",
+      "Explained Variance for Principal Component 1: 0.2303052326768062\n",
+      "Explained Variance for Principal Component 2: 0.036838319576273953\n",
+      "Explained Variance for Principal Component 3: 0.0051519268089063085\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -90,18 +110,19 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "iris = None\n",
-    "scaler = None\n",
-    "#Fit the scaler to iris.data\n",
+    "iris = load_iris()\n",
     "\n",
+    "scaler = StandardScaler()\n",
+    "#Fit the scaler to iris.data\n",
+    "scaler.fit(iris.data)\n",
     "# call scaler.transform() on iris.data and store the result in scaled_X\n",
-    "scaled_X = None\n",
+    "scaled_X = scaler.transform(iris.data)\n",
     "\n",
     "# Store the labels contained in iris.targets below\n",
-    "labels = None\n",
+    "labels = iris.target\n",
     "\n",
     "# Create a PCA() object\n",
-    "pca = None\n",
+    "pca = PCA()\n",
     "\n",
     "#Fit the pca object to scaled_X\n",
     "pca.fit(scaled_X)\n",
@@ -110,7 +131,7 @@
     "X_with_pca = pca.transform(scaled_X)\n",
     "\n",
     "# Enumerate through pca.explained_variance_ratio_ to see the amount of variance captured by each Principal Component\n",
-    "for ind, var in enumerate(None):\n",
+    "for ind, var in enumerate(pca.explained_variance_ratio_):\n",
     "    print(\"Explained Variance for Principal Component {}: {}\".format(ind, var))"
    ]
   },
@@ -128,14 +149,14 @@
     "\n",
     "| Principal Component | Variance Explained  |\n",
     "|---------------------|---------------------|\n",
-    "|      PC1               |                     |\n",
-    "|      PC2            |                     |\n",
-    "|      PC3               |                     |\n",
-    "|      PC4            |                     |\n",
+    "|      PC1               |       0.727              |\n",
+    "|      PC2            |           0.230          |\n",
+    "|      PC3               |        0.037             |\n",
+    "|      PC4            |             0.005        |\n",
     "\n",
     "<center>**_2.) Based on the explained variances in the table above, do you recommend dropping any of the columns to reduce dimensionality? Explain your answer._**</center>\n",
     "\n",
-    "Answer: \n",
+    "Answer: Recommend dropping col 3 and 4 for lack of correllation\n",
     "\n",
     "\n",
     "<center><h3>Challenge: Fit a model using using Principal Components</h3></center>\n",
@@ -154,22 +175,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.264542</td>\n",
+       "      <td>0.505704</td>\n",
+       "      <td>-0.121943</td>\n",
+       "      <td>-0.023073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-2.086426</td>\n",
+       "      <td>-0.655405</td>\n",
+       "      <td>-0.227251</td>\n",
+       "      <td>-0.103208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.367950</td>\n",
+       "      <td>-0.318477</td>\n",
+       "      <td>0.051480</td>\n",
+       "      <td>-0.027825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.304197</td>\n",
+       "      <td>-0.575368</td>\n",
+       "      <td>0.098860</td>\n",
+       "      <td>0.066311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.388777</td>\n",
+       "      <td>0.674767</td>\n",
+       "      <td>0.021428</td>\n",
+       "      <td>0.037397</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PC1       PC2       PC3       PC4\n",
+       "0 -2.264542  0.505704 -0.121943 -0.023073\n",
+       "1 -2.086426 -0.655405 -0.227251 -0.103208\n",
+       "2 -2.367950 -0.318477  0.051480 -0.027825\n",
+       "3 -2.304197 -0.575368  0.098860  0.066311\n",
+       "4 -2.388777  0.674767  0.021428  0.037397"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.264542</td>\n",
+       "      <td>0.505704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-2.086426</td>\n",
+       "      <td>-0.655405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.367950</td>\n",
+       "      <td>-0.318477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.304197</td>\n",
+       "      <td>-0.575368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.388777</td>\n",
+       "      <td>0.674767</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PC1       PC2\n",
+       "0 -2.264542  0.505704\n",
+       "1 -2.086426 -0.655405\n",
+       "2 -2.367950 -0.318477\n",
+       "3 -2.304197 -0.575368\n",
+       "4 -2.388777  0.674767"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for regular model: 0.9473684210526315\n",
+      "Accuracy for model with PCA: 0.8421052631578947\n"
+     ]
+    }
+   ],
    "source": [
-    "pca_X_train, pca_X_test, pca_y_train, pca_y_test = None\n",
-    "reg_X_train, reg_X_test, reg_y_train, reg_y_test = None\n",
+    "pcadf = pd.DataFrame(X_with_pca, columns=[\"PC1\", \"PC2\", \"PC3\", \"PC4\"])\n",
+    "display(pcadf.head())\n",
+    "smdf = pcadf.drop([\"PC3\", \"PC4\"], axis=1)\n",
+    "display(smdf.head())\n",
+    "pca_X_train, pca_X_test, pca_y_train, pca_y_test = train_test_split(smdf, labels)\n",
+    "reg_X_train, reg_X_test, reg_y_train, reg_y_test = train_test_split(iris.data, labels)\n",
     "\n",
-    "clf = None\n",
-    "clf_for_pca = None\n",
+    "clf = DecisionTreeClassifier()\n",
+    "clf_for_pca = DecisionTreeClassifier()\n",
     "\n",
     "# Fit both models on the appropriate datasets\n",
-    "\n",
+    "clf.fit(reg_X_train, reg_y_train)\n",
+    "clf_for_pca.fit(pca_X_train, pca_y_train)\n",
     "\n",
     "# Use each fitted model to make predictions on the appropriate test sets\n",
-    "reg_pred = None\n",
-    "pca_pred None\n",
+    "reg_pred = clf.predict(reg_X_test)\n",
+    "pca_pred = clf_for_pca.predict(pca_X_test)\n",
     "\n",
     "print(\"Accuracy for regular model: {}\".format(accuracy_score(reg_y_test, reg_pred)))\n",
     "print(\"Accuracy for model with PCA: {}\".format(accuracy_score(pca_y_test, pca_pred)))"
@@ -214,22 +395,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicassen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12669</td>\n",
+       "      <td>9656</td>\n",
+       "      <td>7561</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>1338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7057</td>\n",
+       "      <td>9810</td>\n",
+       "      <td>9568</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>3293</td>\n",
+       "      <td>1776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6353</td>\n",
+       "      <td>8808</td>\n",
+       "      <td>7684</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>3516</td>\n",
+       "      <td>7844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13265</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>4221</td>\n",
+       "      <td>6404</td>\n",
+       "      <td>507</td>\n",
+       "      <td>1788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22615</td>\n",
+       "      <td>5410</td>\n",
+       "      <td>7198</td>\n",
+       "      <td>3915</td>\n",
+       "      <td>1777</td>\n",
+       "      <td>5185</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
+       "0  12669  9656     7561     214              2674        1338\n",
+       "1   7057  9810     9568    1762              3293        1776\n",
+       "2   6353  8808     7684    2405              3516        7844\n",
+       "3  13265  1196     4221    6404               507        1788\n",
+       "4  22615  5410     7198    3915              1777        5185"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = None\n",
-    "channel = None\n",
+    "df = pd.read_csv('./datasets/wholesale_customers_data.csv')\n",
+    "channel = df[[\"Channel\"]]\n",
+    "drop_cols = [\"Channel\", \"Region\"]\n",
+    "df.drop(drop_cols, axis=1, inplace=True)\n",
+    "df.head()\n",
     "\n",
     "# Now Drop the Channel and Region Columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:MS-ML-P3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-MS-ML-P3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
