--- a/05_PCA_and_Clustering.ipynb
+++ b/05_PCA_and_Clustering.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy for regular model: 0.9473684210526315\n",
-      "Accuracy for model with PCA: 0.8421052631578947\n"
+      "Accuracy for model with PCA: 0.8157894736842105\n"
      ]
     }
    ],
@@ -368,12 +368,12 @@
     "\n",
     "<center>**_ How would you explain how PCA works to someone non-technical?_**</center>\n",
     "<br>\n",
-    "Answer:\n",
+    "Answer: When you plot points in three dimensions from one vantage point it may look like a blob of data, but rotating the point can show that there is structure in the way the points are aligned. PCA rotatates the space in which the computer is looking to allow for better classification of data.\n",
     "<br>\n",
     "<br>\n",
     "<center>**_In what way(s) can PCA be useful in Data Science and Machine Learning? Provide at least 2 examples._**</center>\n",
     "<br>\n",
-    "Answer:\n",
+    "Answer: Correlated data can produce unexpected results, however if you rotate the data so that the correlation is along an axis then we can see how far outside a point may lie from it.\n",
     "<br>\n",
     "<center><h3>Challenge: Apply PCA and Clustering to Wholesale Customer Data</h3></center>\n",
     "\n",
@@ -395,102 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fresh</th>\n",
-       "      <th>Milk</th>\n",
-       "      <th>Grocery</th>\n",
-       "      <th>Frozen</th>\n",
-       "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12669</td>\n",
-       "      <td>9656</td>\n",
-       "      <td>7561</td>\n",
-       "      <td>214</td>\n",
-       "      <td>2674</td>\n",
-       "      <td>1338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7057</td>\n",
-       "      <td>9810</td>\n",
-       "      <td>9568</td>\n",
-       "      <td>1762</td>\n",
-       "      <td>3293</td>\n",
-       "      <td>1776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6353</td>\n",
-       "      <td>8808</td>\n",
-       "      <td>7684</td>\n",
-       "      <td>2405</td>\n",
-       "      <td>3516</td>\n",
-       "      <td>7844</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13265</td>\n",
-       "      <td>1196</td>\n",
-       "      <td>4221</td>\n",
-       "      <td>6404</td>\n",
-       "      <td>507</td>\n",
-       "      <td>1788</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22615</td>\n",
-       "      <td>5410</td>\n",
-       "      <td>7198</td>\n",
-       "      <td>3915</td>\n",
-       "      <td>1777</td>\n",
-       "      <td>5185</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
-       "0  12669  9656     7561     214              2674        1338\n",
-       "1   7057  9810     9568    1762              3293        1776\n",
-       "2   6353  8808     7684    2405              3516        7844\n",
-       "3  13265  1196     4221    6404               507        1788\n",
-       "4  22615  5410     7198    3915              1777        5185"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('./datasets/wholesale_customers_data.csv')\n",
     "channel = df[[\"Channel\"]]\n",
@@ -498,7 +405,46 @@
     "df.drop(drop_cols, axis=1, inplace=True)\n",
     "df.head()\n",
     "\n",
-    "# Now Drop the Channel and Region Columns"
+    "def pca_analysis(df):\n",
+    "    scaler = StandardScaler()\n",
+    "    #Fit the scaler to data\n",
+    "    scaler.fit(df)\n",
+    "    scaled_X = scaler.transform(df)\n",
+    "\n",
+    "    # Create a PCA() object\n",
+    "    pca = PCA()\n",
+    "\n",
+    "    #Fit the pca object to scaled_X\n",
+    "    pca.fit(scaled_X)\n",
+    "\n",
+    "    # Call pca.transform() on scaled_X and store the results below\n",
+    "    X_with_pca = pca.transform(scaled_X)\n",
+    "\n",
+    "    # Enumerate through pca.explained_variance_ratio_ to see the amount of variance captured by each Principal Component\n",
+    "    for ind, var in enumerate(pca.explained_variance_ratio_):\n",
+    "        print(\"Explained Variance for Principal Component {}: {}\".format(ind, var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance for Principal Component 0: 0.44082892881128066\n",
+      "Explained Variance for Principal Component 1: 0.2837639952661692\n",
+      "Explained Variance for Principal Component 2: 0.12334412896786467\n",
+      "Explained Variance for Principal Component 3: 0.09395503752971496\n",
+      "Explained Variance for Principal Component 4: 0.04761272400688684\n",
+      "Explained Variance for Principal Component 5: 0.010495185418083763\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca_analysis(df)"
    ]
   },
   {
